Refine social share icons and fix tooltip visibility

--- a/static/css/blog-post-common.css
+++ b/static/css/blog-post-common.css
@@ -507,7 +507,7 @@ div.image-group-9,
   padding: 0 !important;
   margin: 0 !important;
   border: none !important;
-  overflow: hidden !important;
+
 }
 
 .sns-button:hover {
